--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,18 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://OniTux.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://oniTux.github.io
+title: Coin coin
+subtitle: Coin?!?
+author: Daniel Chesters
 simple_search: http://google.com/search
-description:
+description: "Des putes, des poneys et de l'inter…, enfin du dév, de la procratination, etc, etc…"
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
-date_format: "ordinal"
+date_format: "%d/%m/%Y"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
@@ -33,6 +33,7 @@ destination: public
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
+category_title_prefix: "Catégorie: "
 markdown: rdiscount
 rdiscount:
   extensions:
@@ -44,7 +45,7 @@ pygments: false # default python pygments have been replaced by pygments.rb
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
-excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
+excerpt_link: "Lire l'article &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
 titlecase: true       # Converts page and post titles to titlecase
 
@@ -63,7 +64,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: onitux
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -86,7 +87,7 @@ pinboard_user:
 pinboard_count: 3
 
 # Delicious
-delicious_user:
+delicious_user: _oni_
 delicious_count: 3
 
 # Disqus Comments
