--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: ___Oni___
 twitter_tweet_button: true
 
 # Google +1
@@ -99,3 +99,8 @@ google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: false
+
+#Navigation
+navigation:
+- text: Home
+  url: /index.html
