reduce about title

--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,5 @@ facebook_like: false
 navigation:
 - text: Home
   url: /index.html
-- text: À propos de moi
+- text: À propos
   url: /about.html
