--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
 category_title_prefix: "Catégorie: "
+category_feed: true
 markdown: rdiscount
 rdiscount:
   extensions:
