--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ source: source
 destination: public
 plugins: plugins
 code_dir: downloads/code
-category_dir: blog/categories
-category_title_prefix: "Catégorie: "
+category_dir: blog/tags
+category_title_prefix: "Tag: "
 category_feed: true
 markdown: rdiscount
 rdiscount:
